--- a/index.html
+++ b/index.html
@@ -50,10 +50,17 @@
     <div class="container mx-auto p-4 md:p-8 max-w-4xl">
         
         <!-- Header & Theme Toggle -->
-        <header class="flex justify-between items-center mb-8">
-            <h1 class="text-3xl font-extrabold text-indigo-600 dark:text-indigo-400">
-                Skrining Dini Autisme
-            </h1>
+        <header class="flex justify-between items-start mb-8">
+            <div>
+                <h1 class="text-3xl font-extrabold text-indigo-600 dark:text-indigo-400">
+                    Skrining Dini Autisme
+                </h1>
+                <!-- Tulisan kecil di bawah judul utama -->
+                <p class="text-xs text-gray-500 dark:text-gray-400 mt-1">
+                    Created by Yono
+                </p>
+            </div>
+            
             <button id="themeToggle" class="p-2 rounded-full light-card shadow-lg hover:shadow-xl transition duration-300">
                 <svg id="sunIcon" class="w-6 h-6 text-yellow-500" fill="none" stroke="currentColor" viewBox="0 0 24 24" style="display: none;">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z"></path>
@@ -360,6 +367,3 @@
         window.onload = function() {
             renderQuestions();
         };
-    </script>
-</body>
-</html>
